--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "youtube-fetcher-backend",
+  "name": "youtube-analytics-backend",
   "version": "1.0.0",
-  "description": "Backend API for YouTube channel fetcher",
+  "description": "Backend API for YouTube Analytics Pro - Advanced channel data extraction and analysis",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "vercel-build": "echo 'Building for Vercel'",
+    "postinstall": "echo 'Backend dependencies installed'"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -16,7 +18,10 @@
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["youtube", "api", "express", "nodejs"],
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": ["youtube", "api", "express", "nodejs", "analytics", "vercel"],
   "author": "",
   "license": "MIT"
 } 
